--- a/sdk/Dockerfile
+++ b/sdk/Dockerfile
@@ -1,4 +1,4 @@
-FROM maven:3.6.3-jdk-11 as maven
+FROM maven:3.8.5-jdk-11 as maven
 
 RUN apt-get update && apt-get install -y jq
 
@@ -8,6 +8,6 @@ WORKDIR /usr/src
 COPY pom.xml /usr/src/
 RUN mvn install
 
-ENV FBN_LUSID_API_URL ${FBN_LUSID_API_URL}
+ENV FBN_DRIVE_API_URL ${FBN_DRIVE_API_URL}
 
 ENTRYPOINT mvn -e -fae test
