--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -5,10 +5,8 @@ name: Build and test
 # Trigger the workflow on push or pull request to master or develop
 
 on:
-  push:
-    branches: [ develop ]
   pull_request:
-    branches: [ master, develop ]
+    branches: [ master ]
 
 jobs:
   # This workflow contains a single job called "build"
@@ -31,25 +29,6 @@ jobs:
           else
             exit 1
           fi
-
-      - name: Run tests on DEVELOP branch
-        if: ${{ github.base_ref == 'develop' || github.ref == 'refs/heads/develop' }}
-        env: 
-          FBN_TOKEN_URL: ${{ secrets.DEVELOP_FBN_TOKEN_URL }}
-          FBN_USERNAME: ${{ secrets.DEVELOP_FBN_USERNAME }}
-          FBN_PASSWORD: ${{ secrets.DEVELOP_FBN_PASSWORD }}
-          FBN_CLIENT_ID: ${{ secrets.DEVELOP_FBN_CLIENT_ID }}
-          FBN_CLIENT_SECRET: ${{ secrets.DEVELOP_FBN_CLIENT_SECRET }}
-          FBN_LUSID_API_URL: ${{ secrets.DEVELOP_FBN_LUSID_API_URL }}
-          FBN_APP_NAME: ${{ secrets.DEVELOP_FBN_CLIENT_ID }}
-          FBN_LUSID_ACCESS_TOKEN: ${{ secrets.DEVELOP_FBN_ACCESS_TOKEN }}
-        run: |
-          echo "env variables for DEVELOP have been set"
-          echo "Changing directory into sdk directory"
-          cd sdk          
-          echo "Running the tests..."
-          docker-compose up --abort-on-container-exit
-          echo "Tests COMPLETED"
       
       - name: Run tests on MASTER branch
         if: ${{ github.base_ref == 'master' }}
@@ -62,6 +41,8 @@ jobs:
           FBN_LUSID_API_URL: ${{ secrets.MASTER_FBN_LUSID_API_URL }}
           FBN_APP_NAME: ${{ secrets.MASTER_FBN_CLIENT_ID }}
           FBN_LUSID_ACCESS_TOKEN: ${{ secrets.MASTER_FBN_ACCESS_TOKEN }}
+          FBN_DRIVE_API_URL: ${{ secrets.MASTER_FBN_DRIVE_API_URL }}
+
         run: | 
           echo "env variables for MASTER have been set"
           echo "Changing directory into sdk directory"
