--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -6,12 +6,12 @@
     <packaging>jar</packaging>
     <name>drive-sdk-preview</name>
     <version>0.1.328-SNAPSHOT</version>
-    <url>https://github.com/openapitools/openapi-generator</url>
+    <url>https://github.com/finbourne/drive-sdk-java-preview/</url>
     <description>OpenAPI Java</description>
     <scm>
-        <connection>scm:git:git@github.com:openapitools/openapi-generator.git</connection>
-        <developerConnection>scm:git:git@github.com:openapitools/openapi-generator.git</developerConnection>
-        <url>https://github.com/openapitools/openapi-generator</url>
+        <connection>git@github.com:finbourne/drive-sdk-extensions-java.git</connection>
+        <developerConnection>git@github.com:finbourne/drive-sdk-extensions-java.git</developerConnection>
+        <url>https://github.com/finbourne/drive-sdk-java-preview/</url>
     </scm>
 
     <licenses>
