--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -7,7 +7,7 @@
     <name>drive-sdk-preview</name>
     <version>0.1.328-SNAPSHOT</version>
     <url>https://github.com/finbourne/drive-sdk-java-preview/</url>
-    <description>OpenAPI Java</description>
+    <description>Finbourne Drive SDK Preview</description>
     <scm>
         <connection>git@github.com:finbourne/drive-sdk-extensions-java.git</connection>
         <developerConnection>git@github.com:finbourne/drive-sdk-extensions-java.git</developerConnection>
